For some reason, I have to run ldconfig after I install OpenCV.  I thought their installer would have taken care of this for me.

--- a/ReprojectDepth/README
+++ b/ReprojectDepth/README
@@ -16,6 +16,7 @@ OpenCV 2.2 is required.  I'm not experienced with the build available in the Ubu
 > cmake ..
 > make
 > sudo make install
+> sudo ldconfig
 
 That's it.  It should tell you where it will be installing everything.
 
